components/sponsoredModule/sponsoredModule.css
/* SponsoredModule component styles */

.wrapper {
  width: 100%;
}

.intro {
  color: $black;
  font-family: $sans;
  font-size: rem(20);
  line-height: 1.3;
}

.name {
  &:not(:first-child) {
    &::before {
      content: ' ';
    }
  }
}

.title {
  color: $brown-gray;
  font-size: rem(20);
  font-weight: 700;
  line-height: 1.3;
  text-transform: capitalize;
}

.logo {
  display: block;
  height: rem(50);
  width: rem(50);

  > * {
    height: 100%;
    width: 100%;
  }

  img,
  span {
    height: 100%;
  }
}

